# ai-ortho-2024

./: .gitignore  README.md  app.py  exploratory.ipynb  extended_pipeline.py  hierarchical_model.py  pyproject.toml  requirements.txt
models/: hernia.pkl  hierarchical.pkl  normal_v_abnormal.pkl  spondy.pkl
parquets/: X_binary_rfe_train.parquet  X_multi_class_train.parquet
tuning_dir/binary_classification/: oracle.json
tuning_dir/binary_classification/trial_00/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_01/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_02/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_03/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_04/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_05/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_06/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_07/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_08/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_09/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_10/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_11/: checkpoint.weights.h5  trial.json
tuning_dir/binary_classification/trial_12/: checkpoint.weights.h5  (+1 more)
tuning_dir/hernia_classification/: oracle.json
tuning_dir/multi_class/: oracle.json
tuning_dir/spondy_classification/: oracle.json
(+254 files in other folders)
