[tool.poetry]
name = "ai in orthopaedics 2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.3"
ucimlrepo = "^0.0.7"
seaborn = "^0.13.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
tensorflow = "^2.16.1"
tensorflow-intel = { version = "^2.16.1", markers = "platform_system == 'Windows'" }
tensorflow-io-gcs-filesystem = { version = "0.37.1", python = ">=3.10,<3.12", markers = "platform_system == 'Windows'" }
keras = "3.5.0"
keras-tuner = "^1.4.7"
tf-keras = "^2.18.0"
streamlit = "^1.40.2"
joblib = "^1.4.2"
shap = "^0.46.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
nbqa = "^1.9.1"
mypy = "^1.13.0"
pandas-stubs = "^2.2.3.241126"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
